fix the issue that background is not showing up on mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,13 @@
   }
 }
 
+@media screen and (max-width: 767px) {
+  .app__header {
+    background-position: bottom 0% right 20%;
+    background-attachment: scroll
+  }
+}
+
 /* @media screen and (max-width: 652px) {
   .app__header {
     background-position: bottom 0 right 20%;
